tests/baselines/reference/classExtendsInterfaceInExpression.errors.txt
classExtendsInterfaceInExpression.ts(7,25): error TS2693: 'A' only refers to a type, but is being used as a value here.


==== classExtendsInterfaceInExpression.ts (1 errors) ====
    interface A {}
    
    function factory(a: any): {new(): Object} {
      return null;
    }
    
    class C extends factory(A) {}
                            ~
!!! error TS2693: 'A' only refers to a type, but is being used as a value here.
    